bad/bin_op_or_void_string.example_compiler_output
ERROR
[1mbad/bin_op_or_void_string.lat:4:8: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `void` and `string`[m
	foo() || "";
	      [1;32m^[m
